alignment emoji corrected

--- a/style.scss
+++ b/style.scss
@@ -43,8 +43,8 @@ img {
   position:absolute;
   transform-origin: center;
   transform: rotate(90deg);
-  top: 13px;
-  left: 13px;
+  top: 12px;
+  left: 12px;
   width: 22px;
   height: 22px;
   animation: opacity 3s linear 1s forwards;
